# stampit

./: Cargo.toml  Readme.md
src/: main.rs
