[package]
name = "stampit"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
kamadak-exif = "0.6.1"

[profile.release]
lto = "thin"    # Enables ThinLTO, a lighter form of Link-Time Optimization
opt-level = "z" # Optimize for size instead of speed
strip = "symbols"  # Strip debug symbols to reduce size
codegen-units = 1  # Forces whole program optimization at the cost of longer compile times
